2009-04-18  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_mysql.n: Made changes so that NROFF formatting matches
	                    the Tcl standard.
	
2009-04-16  Kevin B. Kenny  <kennykb@acm.org>

	* README:
	* configure.in:		Advance version number to 1.0b10
	* configure:		autoconf-2.59

	* generic/tdbcmysql.c: Reworked the allocation of result buffers
			       so that they belong to the result set and
			       are not allocated per row. Pushed binding the
	                       results up before mysql_stmt_execute,
	                       avoiding a crash if the same statement handle
	                       has been used before [Ticket 39a78606aa].
			       No update made to test suite because
			       valgrind detected the error with existing
			       tests on a -DPURIFY build.
	
2009-03-03  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c:
	* library/tdbcmysql.tcl: Replaced 'init' methods with constructors
	written in C.  Added 'statementCreate' and 'resultSetCreate' forwarding
	in place of the 'statementClass' and 'resultSetClass' variables.
	Removed some classes that were the result of overeager copying
	from tclodbc. Replaced 'my variable' with variables declared at
	class level.
	
2009-02-14  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_mysql.n:	Many small format changes to make 'man2html'
				work.
	* README:
	* configure.in:		Advance version number to 1.0b8
	* configure:		autoconf-2.59
	
2009-02-01  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c: 
	* configure.in: Changed the <my_global.h> tests to use the
	correct conditionals on mingw.
	* configure: Autoconf 2.59
	
2009-01-31  Kevin B. Kenny  <kennykb@acm.org>

	* README:
	* configure.in: Advanced version to 1.0b7.
	* configure: Regenerated.
	* generic/tdbcmysql.c: Revised errorCode generation to be
	more [try]-friendly. Changed include to <mysql/mysql.h> so that
	the include path isn't necessary.
	* tests/tdbcmysql.test: Added test flags so that a nonstandard port