@@ -48,7 +48,7 @@ test tdbcsqlite3-1.2 {create a connection, connection string missing} {*}{
 test tdbcsqlite3-1.3 {create a connection, failure} {*}{
     -body {
 	set status [catch {
-	    tdbc::sqlite3::connection create db /dev/null
+	    tdbc::sqlite3::connection create db /dev/null/wtf
 	} result]
 	list $status $result
     }
@@ -1449,8 +1449,7 @@ test tdbcsqlite3-9.35 {stmt foreach - variable not found} {*}{
 	unset thePattern
 	$stmt close
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbcsqlite3-9.36 {db foreach - variable not found} {*}{
@@ -1470,8 +1469,7 @@ test tdbcsqlite3-9.36 {db foreach - variable not found} {*}{
     -cleanup {
 	unset thePattern
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbcsqlite3-9.37 {rs foreach - too few args} {*}{
@@ -1831,8 +1829,7 @@ test tdbcsqlite3-10.19 {allrows - variable not found} {*}{
     -cleanup {
 	unset thePattern
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbcsqlite3-10.20 {allrows - too many args} {*}{
