@@ -2,6 +2,11 @@
 
 	* doc/tdbc_odbc.n: Made changes so that NROFF formatting matches
 	                   the Tcl standard.
+	* generic/tdbcodbc.c: Changed so that all variable access failures
+			      are mapped to NULL rather than passing errors
+			      throught the interp.
+	* tests/tdbcodbc.test: Adjusted test cases for inappropriate access
+			       to array variables.
 	
 2009-04-16  Kevin B. Kenny  <kennykb@acm.org>
 
